@@ -1,3 +1,13 @@
+2021-04-12  Nelson Chu  <nelson.chu@sifive.com>
+
+	* elfxx-riscv.c (riscv_ext_dont_care_version): Removed.
+	(riscv_parse_add_subset): Always add the implicit extensions, even if
+	their versions are RISCV_UNKNOWN_VERSION.
+	(riscv_parse_std_ext): Delay to add i-ext as the implicit extension
+	in the riscv_parse_add_implicit_subsets.  Besides, add g-ext as the
+	implicit extension after it has been expanded.
+	(riscv_parse_add_implicit_subsets): Updated.
+
 2021-02-06  Nick Clifton  <nickc@redhat.com>
 
 	This is the 2.36.1 release.
